2003-07-16  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Anthony_Lee/index.php: 
	* logo-competition/logos_new.php:
	added two more logos
	
2003-07-15  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Geoffroy_Giraux/: 
	* logo-competition/logos/Annemarie_Rowson/:
	* logo-competition/logos/Anthony_Lee/:
	added new logos
	
2003-07-11  Uwe Pross  <uwe.pross@gmx.net>

	* fvwm-cats/*.php: 
	fixed links from cat page to index.php

	* authors/index.php:
	fixex link to picture page

2003-07-10  Uwe Pross  <uwe.pross@gmx.net>

	* navgen.cli:
	* *.php:
	fixed problem with loading definitions.inc when using command line
	interface. reduced debugging info of navgen.
	
	* documentation/dev_webpage/index.php: 
	started documentation of web site. contents are hidden at the
	moment and visible with <url>?show=1
	
	* web-theme/classes/birthday_class.inc: 
	changed algorithm to build a navigation desktop so that desktops
	with more than 4 pages grow horizontaly.

2003-07-08  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php:
	* logo-competition/logos/Stephen_Ford/*:
	* logo-competition/logos/Anand_Tanna/*:
	* logo-competition/logos/Christopher_Culp/*:
	* logo-competition/logos/Olli_Kopakkala/*:
	added some new logos

2003-07-02  Mikhael Goikhman  <migo@homemail.com>

	* index.php:
	removed "new" status of latest releases and birthday_celebration banner

	* logo-competition/logos/Phil_Harper/*-thumb.png:
	* logo-competition/logos/Phil_Harper/index.php:
	added thumbnails of Phil's FVWM related wallpapers

	* logo-competition/logos_new.php:
	* logo-competition/logos/Wolf_Bergenheim/index.php:
	small improvements

2003-07-02  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos/Wolf_Bergenheim/index.php: 
	added logo with white background

	* logo-competition/logos/*/index.php:
	added some email addresses of logo submitters

	* logo-competition/logos/Wolf_Bergenheim/*: 
	added logos

2003-07-01  Uwe Pross  <uwe.pross@gmx.net>
