@@ -389,4 +389,17 @@ width="453" height="157" border="0" vspace="0" hspace="0">
 
 <!-- ============================================================= -->
 
+<?php decoration_window_start("By Russell Martin (1 image)", "", "", 0); ?>
+
+<a href="<?php echo conv_link_target('logos/Russell_Martin/index.php'); ?>">
+
+<p class="centered"><img src="logos/Russell_Martin/overview.png" border="0" vspace="0" hspace="0">
+
+<p>More...
+</a>
+
+<?php decoration_window_end(); ?>
+
+<!-- ============================================================= -->
+
 <p>Return to <a href="<?php echo conv_link_target('./');?>">index</a>.</p>
