@@ -1,5 +1,11 @@
 2003-07-16  Uwe Pross  <uwe.pross@gmx.net>
 
+	* logo-competition/logos_new.php: 
+	* logo-competition/logos/Russell_Martin/*:
+	added logo of russel martin
+
+2003-07-16  Uwe Pross  <uwe.pross@gmx.net>
+
 	* logo-competition/logos/Anthony_Lee/index.php: 
 	* logo-competition/logos_new.php:
 	added two more logos
